Change the structure of the project

--- a/SRClimate/Info.plist
+++ b/SRClimate/Info.plist
@@ -28,7 +28,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>天气定位</string>
+	<string>定位当前位置的城市</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
